kubernetes/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name tap-client
  labels:
    app: *name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *name
  template:
    metadata:
      labels:
        app: *name
    spec:
      containers:

      - name: *name
        image: $LOCATION-DOCKER.pkg.dev/$PROJECT/$REPO/$IMAGE:$VERSION
        # image: europe-west1-docker.pkg.dev/tonads/tonads/client:latest
        imagePullPolicy: Always
        command: [ "pnpm", "start" ]
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: "64Mi"
          limits:
            cpu: 500m
            memory: "128Mi"
