kubernetes/stage/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name tap-client
spec:
  type: NodePort
  selector:
    app: *name
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
